--- a/po/ar.po
+++ b/po/ar.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-08 08:09+0100\n"
+"POT-Creation-Date: 2023-04-19 10:03+0200\n"
 "PO-Revision-Date: 2020-05-02 19:50+0000\n"
 "Last-Translator: mohammad alhargan <malham1@gmail.com>\n"
 "Language-Team: Arabic <https://l10n.opensuse.org/projects/snapper/master/ar/>\n"
@@ -36,7 +36,7 @@ msgid ""
 "\t--columns <columns>\t\tColumns to show separated by comma.\n"
 "\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
 "\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
-"\t\t\t\t\tpre-number, post-number, post-date."
+"\t\t\t\t\tpre-number, post-number, post-date, read-only."
 msgstr ""
 
 msgid ""
@@ -52,6 +52,9 @@ msgid "\t--config, -c <name>\t\tSet name of config to use."
 msgstr "\t--config, -c <name>\t\tعين اسم لتستخدمه للإعدادات."
 
 msgid "\t--csvout\t\t\tSet CSV output format."
+msgstr ""
+
+msgid "\t--default\t\t\tSet snapshot as default snapshot."
 msgstr ""
 
 msgid "\t--description, -d <description>\tDescription for snapshot."
@@ -123,7 +126,15 @@ msgstr "\t--quiet, -q\t\t\tوقف الانتاج الطبيعي."
 msgid "\t--read-only\t\t\tCreate read-only snapshot."
 msgstr "\t--للقراءة-فقط\t\t\tإنشاء لقطة للقراءة فقط."
 
+#, fuzzy
+msgid "\t--read-only\t\t\tSet snapshot read-only."
+msgstr "\t--للقراءة-فقط\t\t\tإنشاء لقطة للقراءة فقط."
+
 msgid "\t--read-write\t\t\tCreate read-write snapshot."
+msgstr "\t--قراءة-وكتابة\t\t\tإنشاء لقطة للقراءة والكتابة."
+
+#, fuzzy
+msgid "\t--read-write\t\t\tSet snapshot read-write."
 msgstr "\t--قراءة-وكتابة\t\t\tإنشاء لقطة للقراءة والكتابة."
 
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
@@ -706,6 +717,7 @@ msgstr "فتح الملف '%s' فشل."
 msgid "Option --from only supported for snapshots of type single."
 msgstr "الاختيار -- مدعوم فقط للقطات من النوع الفردي."
 
+#. DBus versions of CreatePreSnapshot and CreatePostSnapshot do not pass read-only flag
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "الاختيار --القراءة والكتابة مدعومة فقط للقطات من النوع المفرد."
 
@@ -737,6 +749,9 @@ msgstr "ما قبل التاريخ"
 #, c-format
 msgid "Quota error (%s)."
 msgstr "خطأ في الحصة (%s)."
+
+msgid "Read-Only"
+msgstr ""
 
 msgid "See 'man snapper' for further instructions."
 msgstr "لمزيد من التعليمات، راجع 'man snapper'."
