--- a/po/bg.po
+++ b/po/bg.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-08 08:09+0100\n"
+"POT-Creation-Date: 2023-04-19 10:03+0200\n"
 "PO-Revision-Date: 2017-10-29 20:52+0000\n"
 "Last-Translator: strahil nikolov <hunter86_bg@yahoo.com>\n"
 "Language-Team: Bulgarian <https://l10n.opensuse.org/projects/snapper/master/bg/>\n"
@@ -32,7 +32,7 @@ msgid ""
 "\t--columns <columns>\t\tColumns to show separated by comma.\n"
 "\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
 "\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
-"\t\t\t\t\tpre-number, post-number, post-date."
+"\t\t\t\t\tpre-number, post-number, post-date, read-only."
 msgstr ""
 
 msgid ""
@@ -48,6 +48,9 @@ msgid "\t--config, -c <name>\t\tSet name of config to use."
 msgstr ""
 
 msgid "\t--csvout\t\t\tSet CSV output format."
+msgstr ""
+
+msgid "\t--default\t\t\tSet snapshot as default snapshot."
 msgstr ""
 
 msgid "\t--description, -d <description>\tDescription for snapshot."
@@ -116,7 +119,13 @@ msgstr ""
 msgid "\t--read-only\t\t\tCreate read-only snapshot."
 msgstr ""
 
+msgid "\t--read-only\t\t\tSet snapshot read-only."
+msgstr ""
+
 msgid "\t--read-write\t\t\tCreate read-write snapshot."
+msgstr ""
+
+msgid "\t--read-write\t\t\tSet snapshot read-write."
 msgstr ""
 
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
@@ -733,6 +742,7 @@ msgstr ""
 msgid "Option --from only supported for snapshots of type single."
 msgstr ""
 
+#. DBus versions of CreatePreSnapshot and CreatePostSnapshot do not pass read-only flag
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
@@ -767,6 +777,9 @@ msgstr "Имена на машините"
 #, fuzzy, c-format
 msgid "Quota error (%s)."
 msgstr "Входно/Изходна грешка"
+
+msgid "Read-Only"
+msgstr ""
 
 #, fuzzy
 msgid "See 'man snapper' for further instructions."
