--- a/po/ca.po
+++ b/po/ca.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-08 08:09+0100\n"
+"POT-Creation-Date: 2023-04-19 10:03+0200\n"
 "PO-Revision-Date: 2023-02-08 15:14+0000\n"
 "Last-Translator: David Medina <medipas@gmail.com>\n"
-"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/"
-">\n"
+"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,11 +28,12 @@ msgstr "\t--cleanup-algorithm, -c <algorisme>\tNeteja l'algorisme per a la insta
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algorisme>\tNeteja l'algorisme per a les instantànies."
 
+#, fuzzy
 msgid ""
 "\t--columns <columns>\t\tColumns to show separated by comma.\n"
 "\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
 "\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
-"\t\t\t\t\tpre-number, post-number, post-date."
+"\t\t\t\t\tpre-number, post-number, post-date, read-only."
 msgstr ""
 "\t--columns <columnes>\t\tColumnes per mostrar separades per comes.\n"
 "\t\t\t\t\tColumnes possibles: configuració, subvolum, número, per defecte, activa,\n"
@@ -58,6 +58,10 @@ msgstr "\t--config, -c <name>\t\tEstableix el nom de config a usar."
 msgid "\t--csvout\t\t\tSet CSV output format."
 msgstr "\t--csvout\t\t\tEstableix el format de sortida CSV."
 
+#, fuzzy
+msgid "\t--default\t\t\tSet snapshot as default snapshot."
+msgstr "La instantània activa ja és la instantània per defecte."
+
 msgid "\t--description, -d <description>\tDescription for snapshot."
 msgstr "\t--description, -d <description>\tDescripció per a la instantània."
 
@@ -77,9 +81,7 @@ msgid "\t--free-space <space>\t\tTry to make space available."
 msgstr "\t--free-space <space>\t\tIntenta fer espai disponible."
 
 msgid "\t--from <number>\t\t\tCreate a snapshot from the specified snapshot."
-msgstr ""
-"\t--from <número>\t\t\tCrea una instantània a partir d'una instantània "
-"específica."
+msgstr "\t--from <número>\t\t\tCrea una instantània a partir d'una instantània específica."
 
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
 msgstr "\t--fstype, -f <fstype>\t\tEstableix el sistema de fitxers manualment."
@@ -126,7 +128,15 @@ msgstr "\t--quiet, -q\t\t\tSuprimeix la sortida normal."
 msgid "\t--read-only\t\t\tCreate read-only snapshot."
 msgstr "\t--read-only\t\t\tCrea una instantània només de lectura."
 
+#, fuzzy
+msgid "\t--read-only\t\t\tSet snapshot read-only."
+msgstr "\t--read-only\t\t\tCrea una instantània només de lectura."
+
 msgid "\t--read-write\t\t\tCreate read-write snapshot."
+msgstr "\t--read-write\t\t\tCrea una instantània de lectura i d'escriptura."
+
+#, fuzzy
+msgid "\t--read-write\t\t\tSet snapshot read-write."
 msgstr "\t--read-write\t\t\tCrea una instantània de lectura i d'escriptura."
 
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
@@ -700,6 +710,7 @@ msgstr "Ha fallat obrir el fitxer %s."
 msgid "Option --from only supported for snapshots of type single."
 msgstr "L'opció --from només s'admet per a les instantànies de tipus simple."
 
+#. DBus versions of CreatePreSnapshot and CreatePostSnapshot do not pass read-only flag
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "L'opció --read-write només s'admet per a les instantànies de tipus simple."
 
@@ -730,6 +741,9 @@ msgstr "Data Pre"
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Error de quota (%s)."
+
+msgid "Read-Only"
+msgstr ""
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Vegeu \"man snapper\" per a més informació."
