--- a/po/fi.po
+++ b/po/fi.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-08 08:09+0100\n"
+"POT-Creation-Date: 2023-04-19 10:03+0200\n"
 "PO-Revision-Date: 2022-04-03 22:12+0000\n"
 "Last-Translator: Tommi Nieminen <software@legisign.org>\n"
 "Language-Team: Finnish <https://l10n.opensuse.org/projects/snapper/master/fi/>\n"
@@ -31,11 +31,12 @@ msgstr "\t--cleanup-algorithm, -c <algo>\tTilannevedoksen puhdistusalgoritmi."
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algo>\tTilannevedoksen puhdistusalgoritmi."
 
+#, fuzzy
 msgid ""
 "\t--columns <columns>\t\tColumns to show separated by comma.\n"
 "\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
 "\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
-"\t\t\t\t\tpre-number, post-number, post-date."
+"\t\t\t\t\tpre-number, post-number, post-date, read-only."
 msgstr ""
 "\t--columns <sarakkeet>\t\tNäytettävät sarakkeet pilkuin erotettuna.\n"
 "\t\t\t\t\tMahdolliset sarakkeet: config, subvolume, number, default,\n"
@@ -59,6 +60,10 @@ msgstr "\t--config, -c <nimi>\t\tAseta käytettävän määrityksen nimi."
 
 msgid "\t--csvout\t\t\tSet CSV output format."
 msgstr "\t--csvout\t\t\tAsettaa CSV-tulosmuodon."
+
+#, fuzzy
+msgid "\t--default\t\t\tSet snapshot as default snapshot."
+msgstr "Aktiivinen tilannekuva on jo oletus."
 
 msgid "\t--description, -d <description>\tDescription for snapshot."
 msgstr "\t--description, -d <kuvaus>\tTilannevedoksen kuvaus."
@@ -128,7 +133,15 @@ msgstr "\t--quiet, -q\t\t\tJätä pois tavallinen tuloste."
 msgid "\t--read-only\t\t\tCreate read-only snapshot."
 msgstr "\t--read-only\t\t\tLuo tilannekuva vain luku -muodossa."
 
+#, fuzzy
+msgid "\t--read-only\t\t\tSet snapshot read-only."
+msgstr "\t--read-only\t\t\tLuo tilannekuva vain luku -muodossa."
+
 msgid "\t--read-write\t\t\tCreate read-write snapshot."
+msgstr "\t--read-write\t\t\tLuo luku-ja kirjoitus tilannekuva."
+
+#, fuzzy
+msgid "\t--read-write\t\t\tSet snapshot read-write."
 msgstr "\t--read-write\t\t\tLuo luku-ja kirjoitus tilannekuva."
 
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
@@ -706,6 +719,7 @@ msgstr "Tiedoston \"%s\" avaaminen epäonnistui."
 msgid "Option --from only supported for snapshots of type single."
 msgstr "Vaihtoehto --tuettu vain yksittäisille tilannekuville."
 
+#. DBus versions of CreatePreSnapshot and CreatePostSnapshot do not pass read-only flag
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "Vaihtoehto --luku ja kirjoitus tuettu vain yksittäisille tilannekuville."
 
@@ -737,6 +751,9 @@ msgstr "Ennen-päiväys"
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Tilarajoitusvirhe (%s)."
+
+msgid "Read-Only"
+msgstr ""
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Lisää ohjeita: ”man snapper”."
