--- a/po/ja.po
+++ b/po/ja.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-08 08:09+0100\n"
+"POT-Creation-Date: 2023-04-19 10:03+0200\n"
 "PO-Revision-Date: 2023-02-08 15:14+0000\n"
 "Last-Translator: Yasuhiko Kamata <belphegor@belbel.or.jp>\n"
-"Language-Team: Japanese <https://l10n.opensuse.org/projects/snapper/master/"
-"ja/>\n"
+"Language-Team: Japanese <https://l10n.opensuse.org/projects/snapper/master/ja/>\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,11 +34,12 @@ msgstr "\t--cleanup-algorithm, -c <アルゴリズム>\tスナップショット
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <アルゴリズム>\tスナップショットに対するクリーンアップアルゴリズムの指定。"
 
+#, fuzzy
 msgid ""
 "\t--columns <columns>\t\tColumns to show separated by comma.\n"
 "\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
 "\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
-"\t\t\t\t\tpre-number, post-number, post-date."
+"\t\t\t\t\tpre-number, post-number, post-date, read-only."
 msgstr ""
 "\t--columns <列>\t\t表示する列を指定する (カンマ区切り)\n"
 "\t\t\t\t\t指定可能な列: config, subvolume, number, default, active,\n"
@@ -63,6 +63,10 @@ msgstr "\t--config, -c <名前>\t\t使用する設定ファイル名を指定す
 
 msgid "\t--csvout\t\t\tSet CSV output format."
 msgstr "\t--csvout\t\t\tCSV 形式の出力を行なう。"
+
+#, fuzzy
+msgid "\t--default\t\t\tSet snapshot as default snapshot."
+msgstr "有効なスナップショットは既に既定のスナップショットです。"
 
 msgid "\t--description, -d <description>\tDescription for snapshot."
 msgstr "\t--description, -d <説明>\tスナップショットの説明を指定する。"
@@ -130,7 +134,15 @@ msgstr "\t--quiet, -q\t\t\t通常出力される項目を省略する。"
 msgid "\t--read-only\t\t\tCreate read-only snapshot."
 msgstr "\t--read-only\t\t\t読み込み専用のスナップショットを作成する。"
 
+#, fuzzy
+msgid "\t--read-only\t\t\tSet snapshot read-only."
+msgstr "\t--read-only\t\t\t読み込み専用のスナップショットを作成する。"
+
 msgid "\t--read-write\t\t\tCreate read-write snapshot."
+msgstr "\t--read-write\t\t\t読み書き可能なスナップショットを作成する。"
+
+#, fuzzy
+msgid "\t--read-write\t\t\tSet snapshot read-write."
 msgstr "\t--read-write\t\t\t読み書き可能なスナップショットを作成する。"
 
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
@@ -702,6 +714,7 @@ msgstr "ファイル '%s' を開けませんでした。"
 msgid "Option --from only supported for snapshots of type single."
 msgstr "--from オプションは、種類が single (単一) であるスナップショットにのみ対応しています。"
 
+#. DBus versions of CreatePreSnapshot and CreatePostSnapshot do not pass read-only flag
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "--read-write オプションは、種類が single (単一) であるスナップショットにのみ対応しています。"
 
@@ -732,6 +745,9 @@ msgstr "前日付"
 #, c-format
 msgid "Quota error (%s)."
 msgstr "クォータエラー (%s) 。"
+
+msgid "Read-Only"
+msgstr ""
 
 msgid "See 'man snapper' for further instructions."
 msgstr "詳しい手順については、「man snapper」を参照してください。"
