--- a/po/nl.po
+++ b/po/nl.po
@@ -9,11 +9,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-08 08:09+0100\n"
+"POT-Creation-Date: 2023-04-19 10:03+0200\n"
 "PO-Revision-Date: 2023-02-08 15:14+0000\n"
 "Last-Translator: Freek de Kruijf <freek@opensuse.org>\n"
-"Language-Team: Dutch <https://l10n.opensuse.org/projects/snapper/master/nl/>"
-"\n"
+"Language-Team: Dutch <https://l10n.opensuse.org/projects/snapper/master/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -36,11 +35,12 @@ msgstr "\t--cleanup-algorithm, -c <algo>\tOpschoonalgoritme voor momentopname."
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algo>\tOpschoonalgoritme voor momentopnamen."
 
+#, fuzzy
 msgid ""
 "\t--columns <columns>\t\tColumns to show separated by comma.\n"
 "\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
 "\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
-"\t\t\t\t\tpre-number, post-number, post-date."
+"\t\t\t\t\tpre-number, post-number, post-date, read-only."
 msgstr ""
 "\t--columns <columns>\t\tTe tonen kolommen gescheiden door een komma.\n"
 "\t\t\t\t\tMogelijke kolommen: config, subvolume, number, default, active,\n"
@@ -65,6 +65,10 @@ msgstr "\t--config, -c <name>\t\tStel naam van te gebruiken configuratie in."
 msgid "\t--csvout\t\t\tSet CSV output format."
 msgstr "\t--csvout\t\t\tCSV uitvoerformaat instellen."
 
+#, fuzzy
+msgid "\t--default\t\t\tSet snapshot as default snapshot."
+msgstr "Actieve momentopname is al standaard momentopname."
+
 msgid "\t--description, -d <description>\tDescription for snapshot."
 msgstr "\t--description, -d <description>\tBeschrijving van momentopname."
 
@@ -84,9 +88,7 @@ msgid "\t--free-space <space>\t\tTry to make space available."
 msgstr "\t--free-space <space>\t\tRuimte proberen beschikbaar te maken."
 
 msgid "\t--from <number>\t\t\tCreate a snapshot from the specified snapshot."
-msgstr ""
-"\t--from <getal>\t\t\t\tEen momentopname maken van de gespecificeerde "
-"momentopname."
+msgstr "\t--from <getal>\t\t\t\tEen momentopname maken van de gespecificeerde momentopname."
 
 msgid "\t--fstype, -f <fstype>\t\tManually set filesystem type."
 msgstr "\t--fstype, -f <fstype>\t\tStel handmatig het type bestandssysteem in."
@@ -133,7 +135,15 @@ msgstr "\t--quiet, -q\t\t\tOnderdruk normale uitvoer."
 msgid "\t--read-only\t\t\tCreate read-only snapshot."
 msgstr "\t--read-only\t\t\tEen alleen-lezen momentopname maken."
 
+#, fuzzy
+msgid "\t--read-only\t\t\tSet snapshot read-only."
+msgstr "\t--read-only\t\t\tEen alleen-lezen momentopname maken."
+
 msgid "\t--read-write\t\t\tCreate read-write snapshot."
+msgstr "\t--read-write\t\t\tEen lezen-schrijven momentopname maken."
+
+#, fuzzy
+msgid "\t--read-write\t\t\tSet snapshot read-write."
 msgstr "\t--read-write\t\t\tEen lezen-schrijven momentopname maken."
 
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
@@ -707,6 +717,7 @@ msgstr "Openen van bestand '%s' is mislukt."
 msgid "Option --from only supported for snapshots of type single."
 msgstr "Optie --from alleen ondersteund voor momentopnamen van het type single(enkelvoudig)."
 
+#. DBus versions of CreatePreSnapshot and CreatePostSnapshot do not pass read-only flag
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "Optie --read-write alleen ondersteund voor momentopnamen van het type single(enkelvoudig)."
 
@@ -737,6 +748,9 @@ msgstr "Pre-datum"
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Qouta-fout (%s)."
+
+msgid "Read-Only"
+msgstr ""
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Zie 'man snapper' voor meer instructies."
