--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-08 08:09+0100\n"
+"POT-Creation-Date: 2023-04-19 10:03+0200\n"
 "PO-Revision-Date: 2020-05-26 14:40+0000\n"
 "Last-Translator: Jonas Svensson <jonas@ekhorva.se>\n"
 "Language-Team: Swedish <https://l10n.opensuse.org/projects/snapper/master/sv/>\n"
@@ -40,7 +40,7 @@ msgid ""
 "\t--columns <columns>\t\tColumns to show separated by comma.\n"
 "\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
 "\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
-"\t\t\t\t\tpre-number, post-number, post-date."
+"\t\t\t\t\tpre-number, post-number, post-date, read-only."
 msgstr ""
 
 msgid ""
@@ -58,6 +58,9 @@ msgid "\t--config, -c <name>\t\tSet name of config to use."
 msgstr "\t--config, -c <namn>\t\tAnge namnet på den konfiguration som ska användas."
 
 msgid "\t--csvout\t\t\tSet CSV output format."
+msgstr ""
+
+msgid "\t--default\t\t\tSet snapshot as default snapshot."
 msgstr ""
 
 # SLE12
@@ -138,7 +141,15 @@ msgstr "\t--quiet, -q\t\t\tUtelämna normal utmatning."
 msgid "\t--read-only\t\t\tCreate read-only snapshot."
 msgstr "\t--read-only\t\t\tSkapa en skrivskyddad ögonblicksbild."
 
+#, fuzzy
+msgid "\t--read-only\t\t\tSet snapshot read-only."
+msgstr "\t--read-only\t\t\tSkapa en skrivskyddad ögonblicksbild."
+
 msgid "\t--read-write\t\t\tCreate read-write snapshot."
+msgstr "\t--read-write\t\t\tSkapa en läs- och skrivbar ögonblicksbild."
+
+#, fuzzy
+msgid "\t--read-write\t\t\tSet snapshot read-write."
 msgstr "\t--read-write\t\t\tSkapa en läs- och skrivbar ögonblicksbild."
 
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
@@ -846,6 +857,7 @@ msgstr "Det gick inte att öppna filen %s."
 msgid "Option --from only supported for snapshots of type single."
 msgstr "Alternativet --from stöds bara för ögonblicksbilder av typen enkel."
 
+#. DBus versions of CreatePreSnapshot and CreatePostSnapshot do not pass read-only flag
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "Alternativet --read-write stöds bara för ögonblicksbilder av typen enkel."
 
@@ -881,6 +893,9 @@ msgstr "Före datum"
 #, c-format
 msgid "Quota error (%s)."
 msgstr "Kvotfel (%s)."
+
+msgid "Read-Only"
+msgstr ""
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Se 'man snapper' för mer instruktioner."
