--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -9,11 +9,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-08 08:09+0100\n"
+"POT-Creation-Date: 2023-04-19 10:03+0200\n"
 "PO-Revision-Date: 2023-02-10 04:14+0000\n"
 "Last-Translator: Grace Yu <grace.yu@excel-gits.com>\n"
-"Language-Team: Chinese (China) <https://l10n.opensuse.org/projects/snapper/"
-"master/zh_CN/>\n"
+"Language-Team: Chinese (China) <https://l10n.opensuse.org/projects/snapper/master/zh_CN/>\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -36,11 +35,12 @@ msgstr "\t--cleanup-algorithm, -c <算法> \t快照的清理算法。选项：nu
 msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <算法>\t快照的清理算法。选项：number, timeline, empty-pre-post。"
 
+#, fuzzy
 msgid ""
 "\t--columns <columns>\t\tColumns to show separated by comma.\n"
 "\t\t\t\t\tPossible columns: config, subvolume, number, default, active,\n"
 "\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
-"\t\t\t\t\tpre-number, post-number, post-date."
+"\t\t\t\t\tpre-number, post-number, post-date, read-only."
 msgstr ""
 "\t--columns <列>\t\t要显示的列（以逗号分隔）。\n"
 "\t\t\t\t\t可能的列：config、subvolume、number、default、active、\n"
@@ -64,6 +64,10 @@ msgstr "\t--config, -c <配置名称> \t\t设置要使用的配置名称。"
 
 msgid "\t--csvout\t\t\tSet CSV output format."
 msgstr "\t--csvout\t\t\t设定 CSV 输出格式。"
+
+#, fuzzy
+msgid "\t--default\t\t\tSet snapshot as default snapshot."
+msgstr "激活的快照已经是默认快照。"
 
 msgid "\t--description, -d <description>\tDescription for snapshot."
 msgstr "\t--description, -d <描述> \t快照描述。"
@@ -131,7 +135,15 @@ msgstr "\t--quiet, -q\t\t\t静默正常输出。"
 msgid "\t--read-only\t\t\tCreate read-only snapshot."
 msgstr "\t--read-only\t\t\t创建只读快照。"
 
+#, fuzzy
+msgid "\t--read-only\t\t\tSet snapshot read-only."
+msgstr "\t--read-only\t\t\t创建只读快照。"
+
 msgid "\t--read-write\t\t\tCreate read-write snapshot."
+msgstr "\t--read-write\t\t\t创建读写快照。"
+
+#, fuzzy
+msgid "\t--read-write\t\t\tSet snapshot read-write."
 msgstr "\t--read-write\t\t\t创建读写快照。"
 
 msgid "\t--root, -r <path>\t\tOperate on target root (works only without DBus)."
@@ -704,6 +716,7 @@ msgstr "打开文件 '%s' 失败。"
 msgid "Option --from only supported for snapshots of type single."
 msgstr "选项 --from 仅适用于单一类型的快照。"
 
+#. DBus versions of CreatePreSnapshot and CreatePostSnapshot do not pass read-only flag
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "选项 --read-write 仅适用于单一类型的快照。"
 
@@ -734,6 +747,9 @@ msgstr "前期快照日期"
 #, c-format
 msgid "Quota error (%s)."
 msgstr "定额错误 (%s)。"
+
+msgid "Read-Only"
+msgstr ""
 
 msgid "See 'man snapper' for further instructions."
 msgstr "有关更多指导，请参见“man snapper”。"
