--- a/po/ja.po
+++ b/po/ja.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-25 09:55+0200\n"
+"POT-Creation-Date: 2023-07-12 09:40+0200\n"
 "PO-Revision-Date: 2023-04-25 13:14+0000\n"
 "Last-Translator: Yasuhiko Kamata <belphegor@belbel.or.jp>\n"
-"Language-Team: Japanese <https://l10n.opensuse.org/projects/snapper/master/"
-"ja/>\n"
+"Language-Team: Japanese <https://l10n.opensuse.org/projects/snapper/master/ja/>\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -627,7 +626,8 @@ msgstr "設定データが正しくありません。"
 msgid "Invalid free-space value."
 msgstr "空き容量の値が正しくありません。"
 
-msgid "Invalid group."
+#, fuzzy, c-format
+msgid "Invalid group (%s)."
 msgstr "グループが正しくありません。"
 
 #, c-format
@@ -652,7 +652,8 @@ msgstr "サブボリュームが正しくありません。"
 msgid "Invalid table style '%s'."
 msgstr "表のスタイル '%s' が正しくありません。"
 
-msgid "Invalid user."
+#, fuzzy, c-format
+msgid "Invalid user (%s)."
 msgstr "ユーザが正しくありません。"
 
 msgid "Invalid userdata."
