--- a/po/pt.po
+++ b/po/pt.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-25 09:55+0200\n"
+"POT-Creation-Date: 2023-07-12 09:40+0200\n"
 "PO-Revision-Date: 2018-06-01 11:05+0000\n"
 "Last-Translator: Jiri Machalek <jiri.machalek@tieto.com>\n"
 "Language-Team: Portuguese <https://l10n.opensuse.org/projects/snapper/master/pt/>\n"
@@ -672,8 +672,9 @@ msgstr "Dados de emissão inválidos."
 msgid "Invalid free-space value."
 msgstr ""
 
-msgid "Invalid group."
-msgstr ""
+#, fuzzy, c-format
+msgid "Invalid group (%s)."
+msgstr "Estilo de tabela inválido %d."
 
 #, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
@@ -697,8 +698,9 @@ msgstr ""
 msgid "Invalid table style '%s'."
 msgstr "Estilo de tabela inválido %d."
 
-msgid "Invalid user."
-msgstr ""
+#, fuzzy, c-format
+msgid "Invalid user (%s)."
+msgstr "Estilo de tabela inválido %d."
 
 #, fuzzy
 msgid "Invalid userdata."
