--- a/po/id.po
+++ b/po/id.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-25 09:55+0200\n"
+"POT-Creation-Date: 2023-07-12 09:40+0200\n"
 "PO-Revision-Date: 2023-05-31 16:14+0000\n"
 "Last-Translator: Kukuh Syafaat <syafaatkukuh@gmail.com>\n"
-"Language-Team: Indonesian <https://l10n.opensuse.org/projects/snapper/master/"
-"id/>\n"
+"Language-Team: Indonesian <https://l10n.opensuse.org/projects/snapper/master/id/>\n"
 "Language: id\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,11 +34,9 @@ msgid ""
 "\t\t\t\t\ttype, date, user, used-space, cleanup, description, userdata,\n"
 "\t\t\t\t\tpre-number, post-number, post-date, read-only."
 msgstr ""
-"\t--columns <columns>\t\tKolom yang akan ditampilkan dipisahkan dengan koma."
-"\n"
+"\t--columns <columns>\t\tKolom yang akan ditampilkan dipisahkan dengan koma.\n"
 "\t\t\t\t\tKemungkinan kolom: konfigurasi, subvolume, angka, bawaan, aktif,\n"
-"\t\t\t\t\tjenis, tanggal, pengguna, ruang bekas, pembersihan, deskripsi, "
-"data penggguna,\n"
+"\t\t\t\t\tjenis, tanggal, pengguna, ruang bekas, pembersihan, deskripsi, data penggguna,\n"
 "\t\t\t\t\tpra-angka, pasca-angka, pasca-tanggal, hanya baca."
 
 msgid ""
@@ -623,7 +620,8 @@ msgstr "Data konfigurasi tidak valid."
 msgid "Invalid free-space value."
 msgstr "Nilai ruang bebas tidak valid."
 
-msgid "Invalid group."
+#, fuzzy, c-format
+msgid "Invalid group (%s)."
 msgstr "Grup tidak valid."
 
 #, c-format
@@ -648,7 +646,8 @@ msgstr "Subvolume tidak valid."
 msgid "Invalid table style '%s'."
 msgstr "Gaya tabel '%s' tidak valid."
 
-msgid "Invalid user."
+#, fuzzy, c-format
+msgid "Invalid user (%s)."
 msgstr "Pengguna tidak valid."
 
 msgid "Invalid userdata."
