--- a/po/ku.po
+++ b/po/ku.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: memory.ku.po\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-25 09:55+0200\n"
+"POT-Creation-Date: 2023-07-12 09:40+0200\n"
 "PO-Revision-Date: 2005-09-23 00:15+0200\n"
 "Last-Translator: Kurdish Team <i18n@suse.de>\n"
 "Language-Team: Kurdish Team <i18n@suse.de>\n"
@@ -636,8 +636,8 @@ msgstr ""
 msgid "Invalid free-space value."
 msgstr ""
 
-#, fuzzy
-msgid "Invalid group."
+#, fuzzy, c-format
+msgid "Invalid group (%s)."
 msgstr "Vebijêrka nederbasdar: %1"
 
 #, fuzzy, c-format
@@ -662,8 +662,9 @@ msgstr ""
 msgid "Invalid table style '%s'."
 msgstr "Vebijêrka nederbasdar: %1"
 
-msgid "Invalid user."
-msgstr ""
+#, fuzzy, c-format
+msgid "Invalid user (%s)."
+msgstr "Vebijêrka nederbasdar: %1"
 
 msgid "Invalid userdata."
 msgstr ""
