--- a/po/sr.po
+++ b/po/sr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-25 09:55+0200\n"
+"POT-Creation-Date: 2023-07-12 09:40+0200\n"
 "PO-Revision-Date: 2005-08-03 21:03+0200\n"
 "Last-Translator: Данило Шеган <danilo@gnome.org>\n"
 "Language-Team: Serbian <novell@prevod.org>\n"
@@ -630,8 +630,10 @@ msgstr ""
 msgid "Invalid free-space value."
 msgstr ""
 
-msgid "Invalid group."
-msgstr ""
+# error box title
+#, fuzzy, c-format
+msgid "Invalid group (%s)."
+msgstr "У/И грешка"
 
 #, c-format
 msgid "Invalid machine readable format '%s'."
@@ -655,8 +657,9 @@ msgstr ""
 msgid "Invalid table style '%s'."
 msgstr ""
 
-msgid "Invalid user."
-msgstr ""
+#, fuzzy, c-format
+msgid "Invalid user (%s)."
+msgstr "Failed to parse: %s."
 
 msgid "Invalid userdata."
 msgstr ""
